Linked index page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Courses List</title>
+<link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<body>
+<h1>Courses List</h1>
+<ul>
+<li><a href="NumericalMethods_index.html">Adv. Numerical Methods</a></li>
+<li>Dynamics</li>
+</ul>
+
+
+<p><br/>Copyright &copy; 2016 by Cooley</p>
+</body>
+</html>
