--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Courses List</h1>
 <ul>
-<li><a href="NumericalMethods_index.html">Adv. Numerical Methods</a></li>
+<li><a href="NumericalMethods/NumericalMethods_index.html">Adv. Numerical Methods</a></li>
 <li>Dynamics</li>
 </ul>
 
