Updated most links and main.css reference

--- a/Dynamics/Dynamics_index.html
+++ b/Dynamics/Dynamics_index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Dynamics</title>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="../main.css">
 </head>
 <body>
 
@@ -10,7 +10,7 @@
 <!-- Imaginary &#38; Complex Numbers -->
 <h2>Course Information</h2>
 <p><ul>
-	<li><a href="Syllabus.html">Syllabus</a></li>
+	<li><a href="../Common/Syllabus.html">Syllabus</a></li>
 	<li>ME 204 <a href="ME204grades.html">Grading Scale</a></li>
 	<li>ME 204 <a href="https://docs.google.com/spreadsheets/d/1XDqhxXmLG1vNB2orA52_m9F412J0iYRxmy8zdlH0ICA/edit?usp=sharing">Schedule</a></li>
 	<li>Use any version of <i>Engineering Mechanics: Dynamics</i> by R.C. Hibbeler you want.  Online solutions manuals exist for newer editions.  The campus bookstore has the 13th ed.</li>
@@ -18,10 +18,10 @@
 
 <h2>Calculators</h2>
 <p>Any calculator that does <i>not</i> have a "QWERTY" keyboard is allowed for this class.  If your calculator does have a "QWERTY" keyboard (which is rare), then talk to your professor.
-Here are some <a href="CalculatorResources.html">calculator resources</a>.</p>
+Here are some <a href="../Common/CalculatorResources.html">calculator resources</a>.</p>
 
 <h2>Engineering &#38; Math Software</h2>
-<p>Students can use engineering and math software to solve homework problems.  Be judicious in their use, however, as they will not be available during the exams.  Resources for software are located <a href="EngineeringAndMathSoftwareResources.html">here</a>.</p>
+<p>Students can use engineering and math software to solve homework problems.  Be judicious in their use, however, as they will not be available during the exams.  Resources for software are located <a href="../Common/EngineeringAndMathSoftwareResources.html">here</a>.</p>
 
 <h2>Homework Assignments</h2>
 <p>Homework assignments must utilize the BYU-Idaho ME Department's homework standard insofar as it is applicable, whether done by hand or computer/printed.  This requirement includes the following aspects:
@@ -39,7 +39,7 @@ Here are some <a href="CalculatorResources.html">calculator resources</a>.</p>
 <p><a href="ME204_HWassignments.html">Homework Assignments link</a></p>
 
 <h2>Study Skills</h2>
-<p><a href="StudySkills.html">Study Skills link</a></p>
+<p><a href="../Common/StudySkills.html">Study Skills link</a></p>
 
 
 <p><br/>Copyright &copy; 2016 by S. Cooley</p>
