--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <h1>Courses List</h1>
 <ul>
 <li><a href="NumericalMethods/NumericalMethods_index.html">Adv. Numerical Methods</a></li>
-<li>Dynamics</li>
+<li><a href="Dynamics/Dynamics_index.html">Dynamics</a></li>
 </ul>
 
 
-<p><br/>Copyright &copy; 2016 by Cooley</p>
+<p><br/>Copyright &copy; 2016 by S. Cooley</p>
 </body>
 </html>
