--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No1.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Numerical Methods Assignment #1</title>
-<link rel="stylesheet" type="text/css" href="main.css">
+<link rel="stylesheet" type="text/css" href="../../main.css">
 </head>
 <body>
 
