Added note about Anaconda & Miniconda to the first Num. Methods assignment.

--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No1.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No1.html
@@ -32,6 +32,7 @@ To run the Jupyter Notebook file (ending in ".ipynb"), the following must additi
 </ul>
 </p>
 
+<p>You could also install Python 3 and the libraries as a package, such as Anaconda (huge) or Miniconda (not quite as huge).  This method might be easier for many users.</p>
 <p><br/>Copyright &copy; 2016 by S. Cooley</p>
 </body>
 </html>
