--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No1.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No1.html
@@ -7,14 +7,15 @@
 <body>
 
 <h1>Numerical Methods Assignment #1</h1>
-<p>To receive credit for this assignment, you must demonstrate to your professor <em>in person</em> (and obtain acknowledgment) that your computer can correctly run the following files:<br/>
+<h2>Installing Python3, requisite libraries, and Jupyter</h2>
+<p>To receive credit for this assignment, you must demonstrate to your professor <em>in person</em> (and obtain acknowledgment of it being recorded) that your computer can correctly run the following files:<br/>
 <ul>
-<li><a href="ME342_testNotebook.py" target="_blank">ME342_testNotebook.py</a> &ndash; The python test script</li>
+<li><a href="ME342_testscript.py" target="_blank">ME342_testscript.py</a> &ndash; The python test script</li>
 <li><a href="ME342_testNotebook.ipynb" target="_blank">ME342_testNotebook.ipynb</a> &ndash; The Jupyter Notebook test file</li>
 <li>Note: You might have to right-click on the link and select "Save link as...".</li>
 </ul></p>
 <p>
-The software and libraries to run these files must be installed on your personally-owned or managed computer.  This could be either your laptop, your remotely-accessed desktop, or a virtual machine running on such in which you have installed the requisite software/libraries yourself.  Online web services are not acceptable.
+The software and libraries to run these files must be installed on your personally-owned or managed computer.  This could be either your laptop, your remotely-accessed desktop, or a virtual machine running on such in which you have installed the requisite software/libraries yourself.  Online web services, such as Jupyter's "Try it in your browser" link, are <em>not</em> acceptable.
 </p>
 
 <p>To run the python file (ending in ".py"), the following software and libraries must be installed:
@@ -25,14 +26,14 @@ The software and libraries to run these files must be installed on your personal
 <li><em>SymPy</em> symbolics library</li>
 </ul>
 
-To run the Jupyter Notebook file (ending in ".ipynb"), the following must additionally be installed:
+Jupyter is an editor that is displayed in your web browser while running an interpreter on your computer.  To run the Jupyter Notebook file (ending in ".ipynb"), the following must additionally be installed:
 <ul>
-<li>pip3 (most likely needed)</li>
+<!--<li>pip3 (most likely needed)</li>-->
 <li>jupyter</li>
 </ul>
 </p>
 
-<p>You could also install Python 3 and the libraries as a package, such as Anaconda (huge) or Miniconda (not quite as huge).  This method might be easier for many users.</p>
+<p>You could also install Python 3 and the libraries as a package, such as Anaconda (huge) or Miniconda (not quite as huge).  This method might be easier for many users.  More help and links are provided on the Software Resources page.</p>
 <p><br/>Copyright &copy; 2016 by S. Cooley</p>
 </body>
 </html>
