Added code commenting and styling pages.  Added 2nd numerical methods assignment, the coin-toss simulation, with its accompanying template.  Added a monospace font to main.css for elements with the code id.

--- a/Common/LanguageResources.html
+++ b/Common/LanguageResources.html
@@ -7,6 +7,12 @@
 <body>
 
 <h1>Language Resources</h1>
+<h2>Commenting and Code Style</h2>
+<p><ul>
+<li>Following a <a href="CodeStyle.html">styleGuide</a> in your coding endeavors</li>
+<li># <a href="CodeCommenting.html">Commenting</a> your code to leave a trail</li>
+</ul></p>
+
 <h2>Python</h2>
 <!-- Imaginary &#38; Complex Numbers -->
 <p><ul>
