Added textbook information to main Num. Methods page.

--- a/NumericalMethods/NumericalMethods_index.html
+++ b/NumericalMethods/NumericalMethods_index.html
@@ -12,7 +12,12 @@
 	<li><a href="../Common/Syllabus.html">Syllabus</a></li>
 	<li>ME 342 <a href="ME342grades.html">Grading Scale</a></li>
 	<li>ME 342 Schedule</li>
-	<li>Textbook</li>
+	<li>Textbook Information
+		<ul>
+		<li>The textbook sold in the bookstore is <em>Numerical Methods for Engineers</em>, 6th edition, by Chapra & Canale.  It will mainly be used as a reference, and other editions and textbooks are available for reference in the classroom and the campus library.</li>
+		<li>There are many more topics and items covered in this class than are found within the aforementioned textbook; and it is the individual student's responsibility to research the necessary information pertinent to them.</li>
+		<li>Information resources include the Internet (web links on the class site, Google, etc.), myriads of textbooks, and the campus library. By holding students responsible for learning and implementing course concepts on their own, they will be better prepared for the engineering work environment.  After all, if your boss already knows how to do something, ...why would you be hired?</li>
+		</ul></li>
 </ul></p>
 
 <h2>Resources</h2>
