Updated textbook info for Dynamics. Added Precalculus index and grade scale.

--- a/Precalculus/Precalculus_index.html
+++ b/Precalculus/Precalculus_index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dynamics</title>
+<title>Precalculus</title>
 <link rel="stylesheet" type="text/css" href="../main.css">
 </head>
 <body>
 
-<h1>ME 204 Dynamics</h1>
+<h1>Math 109 Precalculus</h1>
 <!-- Imaginary &#38; Complex Numbers -->
 <h2>Course Information</h2>
 <p><ul>
 	<li><a href="../Common/Syllabus.html">Syllabus</a></li>
-	<li>ME 204 <a href="ME204grades.html">Grading Scale</a></li>
-	<li>ME 204 <a href="https://docs.google.com/spreadsheets/d/1XDqhxXmLG1vNB2orA52_m9F412J0iYRxmy8zdlH0ICA/edit?usp=sharing">Schedule</a></li>
-	<li>Textbook: <i>Engineering Mechanics: Dynamics</i> by R.C. Hibbeler. The campus bookstore has the 13th ed.</li>
+	<li>Math 109 <a href="Math109grades.html">Grading Scale</a></li>
+	<li>Math 109 <a href="https://docs.google.com/spreadsheets/d/16YwC1eWgP8HkVAnm9fkXEQjaBH-dGJ8ZPNvnBGaicZg/edit?usp=sharing">Schedule</a></li>
+	<li>Textbook: <i>Precalculus: Functions and Graphs</i> by Mark Dugopolski, 4th ed. The textbook comes online with the required MyMathLab.  Students will be automatically enrolled in MyMathLab, and their school account will be charged after the add/drop deadline (about one week into the semester).  Use Firefox or Chrome to access MyMathLab and beware of pop-up blocking by the browser.</li>
 </ul></p>
 
 <h2>Calculators</h2>
@@ -24,7 +24,7 @@ Here are some <a href="../Common/CalculatorResources.html">calculator resources<
 <p>Students can use engineering and math software to solve homework problems.  Be judicious in their use, however, as they will not be available during the exams.  Resources for software are located <a href="../Common/EngineeringAndMathSoftwareResources.html">here</a>.</p>
 
 <h2>Homework Assignments</h2>
-<p>Homework assignments must utilize the BYU-Idaho ME Department's homework standard insofar as it is applicable, whether done by hand or computer/printed.  This requirement includes the following aspects:
+<p>Homework assignments should utilize the BYU-Idaho ME Department's homework standard insofar as it is applicable, particularly on story problems.  This includes the following aspects:
 
 <ul>
 	<li>One problem per page</li>
@@ -36,12 +36,12 @@ Here are some <a href="../Common/CalculatorResources.html">calculator resources<
 	<li>Notes and commenting ("document" your solution)</li>
 </ul>
 </p>
-<p><a href="https://content.byui.edu/file/e1e54b2b-ef2c-473e-9681-54c9f5e5d540/$/ME204_HWassignments.html">Homework Assignments link</a></p>
+<!-- <p><a href="">Homework Assignments link</a></p> -->
 
 <h2>Study Skills</h2>
 <p><a href="../Common/StudySkills.html">Study Skills link</a></p>
 
 
-<p><br/>Copyright &copy; 2016 by S. Cooley</p>
+<p><br/>Copyright &copy; 2017 by S. Cooley</p>
 </body>
 </html>
