--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <ul>
 <li><a href="NumericalMethods/NumericalMethods_index.html">Adv. Numerical Methods</a></li>
 <li><a href="Dynamics/Dynamics_index.html">Dynamics</a></li>
+<li><a href="Precalculus/Precalculus_index.html">Precalculus</a></li>
 </ul>
 
 
