Updated link for homework assignments page.

--- a/Dynamics/Dynamics_index.html
+++ b/Dynamics/Dynamics_index.html
@@ -36,7 +36,7 @@ Here are some <a href="../Common/CalculatorResources.html">calculator resources<
 	<li>Notes and commenting ("document" your solution)</li>
 </ul>
 </p>
-<p><a href="https://content.byui.edu/file/e1e54b2b-ef2c-473e-9681-54c9f5e5d540/$/ME204_HWassignments.html">Homework Assignments link</a></p>
+<p><a href="https://content.byui.edu/file/cbf363b2-b4bc-419f-be83-ef7ded7bb34e/1/ME204_HWassignments.html">Homework Assignments link</a></p>
 
 <h2>Study Skills</h2>
 <p><a href="../Common/StudySkills.html">Study Skills link</a></p>
