--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -11,7 +11,10 @@
 <ul>
 	<li><a href="NumericalMethods_Assignment_No1.html">Assignment #1</a> &ndash; Installing Python3, requisite libraries, and Jupyter</li>
 	<li><a href="NumericalMethods_Assignment_No2_coinToss.html">Assignment #2</a> &ndash; Simulated coin tosses</li>
+	<li><a href="NumericalMethods_Assignment_No3_MonteCarloToolbox.html">Assignment #3</a> &ndash; Monte Carlo integration</li>
 </ul>
+
+
 </p>
 
 <p>Include your name in the names of submitted files.  For instance, rename your file to be "LastName_FirstName_assignment2.ipynb".  The order of the last and first name will help in grading.  You can rename a Jupyter notebook file while it is open by simply clicking on the file name at the top.</p>
