Added f(x) to an equation in Numerical Methods assignment 3.

--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No3_MonteCarloToolbox.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No3_MonteCarloToolbox.html
@@ -44,7 +44,7 @@
 <li>$$\int_0^{\pi/2} cos(x)\,dx$$</li>
 <li>$$\int_0^{10} e^{-1/x}\,dx$$ </li>
 <li>With an interval of $\left[-\pi/2,10\right]$, 
-		$$\begin{cases} 
+		$$f(x)=\begin{cases} 
       cos(x) & x\lt 0 \\
       e^{-1/x} & 0\leq x 
    \end{cases}$$</li>
