Updated syllabus info to include office hours and legal statements file.

--- a/Common/Syllabus.html
+++ b/Common/Syllabus.html
@@ -29,6 +29,15 @@ td.bar {
 <h2>Tabooed Behaviors and Items</h2>
 <p>Student grades can be docked for unexcused absences, impolite or disruptive classroom behavior (including talking, especially when it is off-topic), lack of appropriate class participation, and inappropriate technology use. Ear-buds and headphones are not allowed without instructor approval. The student is expected to regularly bring a calculator, pencil/pen, and paper for taking notes.  Cell phones in place of calculators are <em>not</em> permitted during quizzes, <em>even when a calculator might be necessary.</em></p>
 
-<p><br/>Copyright &copy; 2016 by S. Cooley</p>
+<h2>Office Hours</h2>
+<p>Office hours are by appointment, scheduled through email.</p>
+
+<h2>Disability Services and Sexual Misconduct</h2>
+<p>Information regarding disabilities and sexual misconduct can be downloaded <a href="https://content.byui.edu/file/cbf363b2-b4bc-419f-be83-ef7ded7bb34e/1/Updated%20Syllabus%20Statements%202017.docx">here</a>.</p>
+</div>
+
+<div id="footer">
+<p><br/>Copyright &copy; 2017 by S. Cooley</p>
+</div>
 </body>
 </html>
