Added pages for video and presentation links, chpts 12-14.

--- a/Dynamics/Dynamics_index.html
+++ b/Dynamics/Dynamics_index.html
@@ -37,11 +37,12 @@ Here are some <a href="../Common/CalculatorResources.html">calculator resources<
 </ul>
 </p>
 <p><a href="https://content.byui.edu/file/cbf363b2-b4bc-419f-be83-ef7ded7bb34e/1/ME204_HWassignments.html">Homework Assignments link</a></p>
+<p><a href="Dynamics_Links.html">Potentially-helpful Dynamics links</a> (videos, presentations, etc.)</p>
 
 <h2>Study Skills</h2>
 <p><a href="../Common/StudySkills.html">Study Skills link</a></p>
 
-
-<p><br/>Copyright &copy; 2016 by S. Cooley</p>
+<div id="footer">
+<p><br/>Copyright &copy; 2017 by S. Cooley</p></div>
 </body>
 </html>
