Added absence section to the syllabus.

--- a/Common/Syllabus.html
+++ b/Common/Syllabus.html
@@ -29,6 +29,9 @@ td.bar {
 <h2>Tabooed Behaviors and Items</h2>
 <p>Student grades can be docked for unexcused absences, impolite or disruptive classroom behavior (including talking, especially when it is off-topic), lack of appropriate class participation, and inappropriate technology use. Ear-buds and headphones are not allowed without instructor approval. The student is expected to regularly bring a calculator, pencil/pen, and paper for taking notes.  Cell phones in place of calculators are <em>not</em> permitted during quizzes, <em>even when a calculator might be necessary.</em></p>
 
+<h2>Absences</h2>
+<p>All absences must be approved by the instructor, and the requests for such must have an accompanying email stating the reason and date(s) for the said absence(s).  Non-approved absences will be detrimental to a student's grade when attendance is required (see the Grading Scale page).</p>
+
 <h2>Office Hours</h2>
 <p>Office hours are by appointment, scheduled through email.</p>
 
