Added Num. Methods assignment #5 (Secant Method) webpage/template notebook and updated the assignments page accordingly.  Fixed a grammatical typo in assignment 4 webpage.  Removed an old attempt at the assignment 4 template.

--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No4_BisectionMethod.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No4_BisectionMethod.html
@@ -41,7 +41,7 @@
 </p>
 
 <h3>Using the Bisection Method</h3>
-<p>You might consider plotting the the first two equations with matplotlib to see where you should set the bracketing values for the Bisection Method. The result's accuracy must be to at least four decimal places.  The assigned equations and associated roots to solve for are as follows:
+<p>You might consider plotting the first two equations with matplotlib to see where you should set the bracketing values for the Bisection Method. The result's accuracy must be to at least four decimal places.  The assigned equations and associated roots to solve for are as follows:
 <ol>
 <li>Find both roots of the quadratic equation $$x^2=\frac{4}{3}x + \frac{5}{9}$$</li>
 <li>Find the first positive root of $cos(x)$</li>
