--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -13,9 +13,9 @@
 	<li><a href="NumericalMethods_Assignment_No2_coinToss.html">Assignment #2</a> &ndash; Simulated coin tosses</li>
 	<li><a href="NumericalMethods_Assignment_No3_MonteCarloToolbox.html">Assignment #3</a> &ndash; Monte Carlo integration</li>
 	<li><a href="NumericalMethods_Assignment_No4_BisectionMethod.html">Assignment #4</a> &ndash; Solving equations with the Bisection Method</li>
+	<li><a href="NumericalMethods_Assignment_No5_SecantMethod.html">Assignment #5</a> &ndash; Solving equations with the Secant Method</li>
+
 </ul>
-
-
 </p>
 
 <p>Include your name in the names of submitted files.  For instance, rename your file to be "LastName_FirstName_assignment2.ipynb".  The order of the last and first name will help in grading.  You can rename a Jupyter notebook file while it is open by simply clicking on the file name at the top.</p>
