Added the rest of the links for the dynamics chapters and updated the Dynamics_Links index accordingly.  Also added a couple of links for rocket sled videos to the chapter 13 links page.

--- a/Dynamics/Dynamics_Links_ch13.html
+++ b/Dynamics/Dynamics_Links_ch13.html
@@ -14,6 +14,8 @@
 	<li><a href="https://content.byui.edu/items/2e93abbc-f301-4527-95de-c7d7e095414f/1/?.vi=file&attachment.uuid=4b13cab9-080d-4e82-bfb6-bb7569cca5b5">Equation of Motion in Cartesian Coordinates</a> (.pptx)</li>
 </ul></li>
 <li><a href="https://content.byui.edu/items/2e93abbc-f301-4527-95de-c7d7e095414f/1/?.vi=file&attachment.uuid=16b33aae-4e4d-4845-b95a-faf9639c2d9c">Particle Kinetics &ndash; Force and Acceleration</a> (.ppt)</li>
+<li><a href="https://youtu.be/siau78EFLgc">World Record 83 G Deceleration Peak on Rocket Sled 1958-05-16 (1967) USAF</a></li>
+<li><a href="https://youtu.be/3UEYxf4fl_A">Manned Rocket Sled Run</a> (this is the video that includes your textbook's pictures)</li>
 </ul></p>
 
 <h2>13.5</h2>
