--- a/Dynamics/Dynamics_Links.html
+++ b/Dynamics/Dynamics_Links.html
@@ -16,6 +16,23 @@
 <h2>Chapter 14</h2>
 <p><ul><li>Chapter 14 links are located <a href="Dynamics_Links_ch14.html">here</a>.</li></ul></p>
 
+<h2>Chapter 15</h2>
+<p><ul><li>Chapter 15 links are located <a href="Dynamics_Links_ch15.html">here</a>.</li></ul></p>
+
+<h2>Chapter 16</h2>
+<p><ul><li>Chapter 16 links are located <a href="Dynamics_Links_ch16.html">here</a>.</li></ul></p>
+
+<h2>Chapter 17</h2>
+<p><ul><li>Chapter 17 links are located <a href="Dynamics_Links_ch17.html">here</a>.</li></ul></p>
+
+<h2>Chapter 18</h2>
+<p><ul><li>Chapter 18 links are located <a href="Dynamics_Links_ch18.html">here</a>.</li></ul></p>
+
+<h2>Chapter 19</h2>
+<p><ul><li>Chapter 19 links are located <a href="Dynamics_Links_ch19.html">here</a>.</li></ul></p>
+
+
+
 <div id="footer">
 <!--<p><br/>Copyright &copy; 2017 by S. Cooley</p> -->
 </div>
