Added a link to a resources index page for other professors' numerical methods stuff under the Math and Numerical Methods page.

--- a/Common/MathAndNumericalMethodsResources.html
+++ b/Common/MathAndNumericalMethodsResources.html
@@ -14,6 +14,11 @@
 
 </ul></p>
 
+<h2>Other Professors' Resources</h2>
+<p><ul>
+<li><a href="https://content.byui.edu/file/7daac372-0884-42cb-a95a-8b4a57c7ae65/1/ME342_OtherProfessorsResources.html">Index</a> of resources by other professors.</li>
+</ul></p>
+
 <p><br/>Copyright &copy; 2016 by S. Cooley</p>
 </body>
 </html>
