--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -14,10 +14,12 @@
 	<li><a href="NumericalMethods_Assignment_No3_MonteCarloToolbox.html">Assignment #3</a> &ndash; Monte Carlo integration</li>
 	<li><a href="NumericalMethods_Assignment_No4_BisectionMethod.html">Assignment #4</a> &ndash; Solving equations with the Bisection Method</li>
 	<li><a href="NumericalMethods_Assignment_No5_SecantMethod.html">Assignment #5</a> &ndash; Solving equations with the Secant Method</li>
+	<li><a href="NumericalMethods_Assignment_No6_RiddersMethod.html">Assignment #6</a> &ndash; Solving equations with Ridders' Method (Draft)</li>
 
 </ul>
 </p>
 
+<h2>Naming Your Files</h2>
 <p>Include your name in the names of submitted files.  For instance, rename your file to be "LastName_FirstName_assignment2.ipynb".  The order of the last and first name will help in grading.  You can rename a Jupyter notebook file while it is open by simply clicking on the file name at the top.</p>
 
 <p><br/>Copyright &copy; 2017 by S. Cooley</p>
