Revised Num. Methods assignment #6 to use HTML5 and MathJax.  Linked it into the assignments index page accordingly.

--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -14,7 +14,7 @@
 	<li><a href="NumericalMethods_Assignment_No3_MonteCarloToolbox.html">Assignment #3</a> &ndash; Monte Carlo integration</li>
 	<li><a href="NumericalMethods_Assignment_No4_BisectionMethod.html">Assignment #4</a> &ndash; Solving equations with the Bisection Method</li>
 	<li><a href="NumericalMethods_Assignment_No5_SecantMethod.html">Assignment #5</a> &ndash; Solving equations with the Secant Method</li>
-<!--	<li><a href="NumericalMethods_Assignment_No6_RiddersMethod.html">Assignment #6</a> &ndash; Solving equations with Ridders' Method (Draft)</li> -->
+<li><a href="NumericalMethods_Assignment_No6_RiddersMethod_v2.html">Assignment #6</a> &ndash; Solving equations with Ridders' Method and HTML5</li>
 
 </ul>
 </p>
