Added a note about using JavaScript in Jupyter Notebooks to the Numerical Methods assignments page.  Added a link to the MathJax website to the Language Resources page.

--- a/Common/LanguageResources.html
+++ b/Common/LanguageResources.html
@@ -28,10 +28,11 @@
 <p><ul>
 	<li><a href="http://www.w3schools.com/">w3schools</a> reference & tutorials</li>
 	<li><a href="https://developer.mozilla.org/en-US/docs/Web">Mozilla</a> reference & tutorials</li>
+	<li>The <a href="https://www.mathjax.org/">MathJax</a> website</li>
 </ul></p>
 
 <h2>Bash</h2>
 
-<p><br/>Copyright &copy; 2016 by S. Cooley</p>
+<p><br/>Copyright &copy; 2017 by S. Cooley</p>
 </body>
 </html>
