--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -22,6 +22,9 @@
 <h2>Naming Your Files</h2>
 <p>Include your name in the names of submitted files.  For instance, rename your file to be "LastName_FirstName_assignment2.ipynb".  The order of the last and first name will help in grading.  You can rename a Jupyter notebook file while it is open by simply clicking on the file name at the top.</p>
 
+<h2>Using Jupyter Notebooks</h2>
+<p>You can use Jupyter Notebooks when developing your JavaScript code by starting each JavaScript cell with <em>%%javascript</em>.  To display output from your JavaScript code, use <em>element.append()</em> in a similar manner to the way you use <em>print()</em> in your Python code cells.</p>
+
 <p><br/>Copyright &copy; 2017 by S. Cooley</p>
 </body>
 </html>
