Created assignment #7 and its ipynb template.  Updated assignments index accordingly.

--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -15,6 +15,7 @@
 	<li><a href="NumericalMethods_Assignment_No4_BisectionMethod.html">Assignment #4</a> &ndash; Solving equations with the Bisection Method</li>
 	<li><a href="NumericalMethods_Assignment_No5_SecantMethod.html">Assignment #5</a> &ndash; Solving equations with the Secant Method</li>
 <li><a href="NumericalMethods_Assignment_No6_RiddersMethod_v2.html">Assignment #6</a> &ndash; Solving equations with Ridders' Method and HTML5</li>
+<li><a href="NumericalMethods_Assignment_No7_SimultaneousEquations.html">Assignment #7</a> &ndash; Solving simultaneous equations with Ax = B and Iterative Gauss-Seidel methods</li>
 
 </ul>
 </p>
