Added new Code Examples link and supporting folders to Numerical Methods Resources list on Numerical Methods index page.  Added a JavaScript objects example called watch.html.

--- a/NumericalMethods/NumericalMethods_index.html
+++ b/NumericalMethods/NumericalMethods_index.html
@@ -21,11 +21,11 @@
 </ul></p>
 
 <h2>Resources</h2>
-<!-- Imaginary &#38; Complex Numbers -->
 <p><ul>
 	<li><a href="../Common/LanguageResources.html">Language Resources</a></li>
 	<li><a href="../Common/SoftwareResources.html">Software Resources</a></li>
 	<li><a href="../Common/MathAndNumericalMethodsResources.html">Math &#38; Numerical Methods Resources</a></li>
+	<li><a href="Examples/CodeExamples.html">Code Examples</a></li>
 </ul></p>
 
 <h2>Assignments</h2>
