Finalized the equation for Numerical Methods assignment #9 and updated the assignment index to include the link.

--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -17,6 +17,7 @@
 <li><a href="NumericalMethods_Assignment_No6_RiddersMethod_v2.html">Assignment #6</a> &ndash; Solving equations with Ridders' Method and HTML5</li>
 <li><a href="NumericalMethods_Assignment_No7_SimultaneousEquations.html">Assignment #7</a> &ndash; Solving simultaneous equations with Ax = B and Iterative Gauss-Seidel methods</li>
 <li><a href="NumericalMethods_Assignment_No8_SolvingPipeFlow.html">Assignment #8</a> &ndash; Solving simultaneous equations in pipe-flow calculations</li>
+<li><a href="NumericalMethods_Assignment_No9_Euler_RungeKutta.html">Assignment #9</a> &ndash; Solving an ODE with the Euler &amp; 4th-order Runge-Kutta methods</li>
 </ul>
 </p>
 
