Added Numerical Methods assignment #10 on multi-equation Runge-Kutta and updated the assignments index accordingly.  The ODE_template of assignment #9 should only have been changed insofar as Jupyter-Notebooks did an autosave while it was open.

--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -18,8 +18,10 @@
 <li><a href="NumericalMethods_Assignment_No7_SimultaneousEquations.html">Assignment #7</a> &ndash; Solving simultaneous equations with Ax = B and Iterative Gauss-Seidel methods</li>
 <li><a href="NumericalMethods_Assignment_No8_SolvingPipeFlow.html">Assignment #8</a> &ndash; Solving simultaneous equations in pipe-flow calculations</li>
 <li><a href="NumericalMethods_Assignment_No9_Euler_RungeKutta.html">Assignment #9</a> &ndash; Solving an ODE with the Euler &amp; 4th-order Runge-Kutta methods</li>
-</ul>
-</p>
+<li><a href="NumericalMethods_Assignment_No10_MultiEquation_RK.html">Assignment #10</a> &ndash; Solving multiple ODE's simultaneously with the 4th-order Runge-Kutta method</li>
+</ul></p>
+
+
 
 <h2>Naming Your Files</h2>
 <p>Include your name in the names of submitted files.  For instance, rename your file to be "LastName_FirstName_assignment2.ipynb".  The order of the last and first name will help in grading.  You can rename a Jupyter notebook file while it is open by simply clicking on the file name at the top.</p>
