Corrected typographical error in assignment #10 concerning dx/dt.

--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No10_MultiEquation_RK.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No10_MultiEquation_RK.html
@@ -34,7 +34,7 @@
 <p>The assigned ODE's that your code must correctly solve simultaneously are as follows:
 <ul>
 <li>$\frac{dx}{dt}=-0.5 x + y t$</li>
-<li>$\frac{dy}{dx}=4-0.1 x -0.2 y$</li>
+<li>$\frac{dy}{dt}=4-0.1 x -0.2 y$</li>
 <li>$x(0)=1$</li>
 <li>$y(0)=2$</li>
 <li>$t$ ranges from 0 to 2</li>
