Added some more text editor options to the Software Resources page.

--- a/Common/SoftwareResources.html
+++ b/Common/SoftwareResources.html
@@ -32,23 +32,35 @@
 </p>
 
 <h2>Editors &#38; IDE's</h2>
+<h3>Atom</h3>
+<p>Github's <a href="https://atom.io/">Atom</a> editor.  Install the <a href="https://atom.io/packages/autoclose-html">autoclose-html</a> package to complete HTML tags automatically.</p>
+
+<h3>Bluefish</h3>
+<p>The <a href="http://bluefish.openoffice.nl/index.html">Bluefish</a> editor</p>
+
+<h3>Geany</h3>
+<p>The <a href="https://www.geany.org/">Geany</a> editor</p>
+
+<h3>GNU Emacs</h3>
+<p>The GNU <a href="https://www.gnu.org/software/emacs/">Emacs</a> editor</p>
+
 <h3>Jupyter</h3>
-<p><ul>
-	<li><a href="http://jupyter.org/">Jupyter Notebooks</a></li>
-</ul></p>
+<p><a href="http://jupyter.org/">Jupyter Notebooks</a></p>
 
 <h3>Notepad++</h3>
-<p><ul>
-	<li><a href="https://notepad-plus-plus.org/">Notepad++ website</a></li>
-</ul></p>
+<p><a href="https://notepad-plus-plus.org/">Notepad++ website</a></p>
 
 <h3>PortableApps</h3>
 <p><ul>
 	<li><a href="http://portableapps.com/">PortableApps platform</a></li>
-	<li><a href="http://portableapps.com/apps/development/notepadpp_portable">PortableApps Notepad++</a></li>
+	<li>PortableApps <a href="http://portableapps.com/apps/development/geany_portable">Geany</a></li>
+	<li>PortableApps <a href="http://portableapps.com/apps/development/gvim_portable">gVim</a></li>
+	<li>PortableApps <a href="http://portableapps.com/apps/development/notepadpp_portable">Notepad++</a></li>
 </ul></p>
 
+<h3>Vim</h3>
+<p>The <a href="http://www.vim.org/">Vim</a> editor</p>
 
-<p><br/>Copyright &copy; 2016 by S. Cooley</p>
+<p><br/>Copyright &copy; 2017 by S. Cooley</p>
 </body>
 </html>
