--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No11_TrapezoidIntegration.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No11_TrapezoidIntegration.html
@@ -37,9 +37,9 @@
 
 <p>In summary, the power levels for the three experiment sections are given as follows:
 <ul>
-<li>For 0 &le; t < 4 days-22 hours-37 min., power levels are given in the linear data <a href="">text file</a></li>
+<li>For 0 &le; t < 4 days-22 hours-37 min., power levels are given in the linear data <a href="">text file</a>.  (You must use the text file reader.)</li>
 <li>For ... &le; t < restart time, the equation is... </li>
-<li>For t &ge; restart time, use the <a href="">CSV step data</a></li>
+<li>For t &ge; restart time, use the <a href="">CSV step data</a>. (You must use the CSV module's reader.)</li>
 </ul>
 
 </p>
