For Numerical Methods assignment # 11, added temperature values to the linear data and made a continuous function for mid section.

--- a/NumericalMethods/Assignments/NumericalMethods_Assignment_No11_TrapezoidIntegration.html
+++ b/NumericalMethods/Assignments/NumericalMethods_Assignment_No11_TrapezoidIntegration.html
@@ -38,7 +38,7 @@
 <p>In summary, the power levels for the three experiment sections are given as follows:
 <ul>
 <li>For 0 &le; t < 4 days-22 hours-37 min., power levels are given in the linear data <a href="">text file</a>.  (You must use the text file reader.)</li>
-<li>For ... &le; t < restart time, the equation is... </li>
+<li>For ... &le; t < restart time, the equation is... $\frac{1}{5} sin\left(\frac{\pi}{12}\left(t+15\right)\right)+\frac{3}{5}$</li>
 <li>For t &ge; restart time, use the <a href="">CSV step data</a>. (You must use the CSV module's reader.)</li>
 </ul>
 
