--- a/NumericalMethods/Assignments/NumericalMethodsAssignments.html
+++ b/NumericalMethods/Assignments/NumericalMethodsAssignments.html
@@ -19,6 +19,7 @@
 <li><a href="NumericalMethods_Assignment_No8_SolvingPipeFlow.html">Assignment #8</a> &ndash; Solving simultaneous equations in pipe-flow calculations</li>
 <li><a href="NumericalMethods_Assignment_No9_Euler_RungeKutta.html">Assignment #9</a> &ndash; Solving an ODE with the Euler &amp; 4th-order Runge-Kutta methods</li>
 <li><a href="NumericalMethods_Assignment_No10_MultiEquation_RK.html">Assignment #10</a> &ndash; Solving multiple ODE's simultaneously with the 4th-order Runge-Kutta method</li>
+<li><a href="NumericalMethods_Assignment_No11_TrapezoidIntegration.html">Assignment #11</a> &ndash; Integrating with the Trapezoid Method</li>
 </ul></p>
 
 
